# perfetto

./: .bazelignore  .gitignore  Android.bp  BUILD  BUILD.extras  BUILD.gn  WORKSPACE  index.html  package-lock.json  package.json  perfetto.rc  tsconfig.json
base/: BUILD.gn  android_task_runner.cc  logging.h  unix_task_runner.cc
bazel/: protozero.bzl
data/: summary.json
data/2017-09-26/cloc/: cloc.json
data/2017-09-26/commit_log/: commit_log.json
data/2017-09-26/todos/: todos.json
data/2017-09-27/cloc/: cloc.json
data/2017-09-28/cloc/: cloc.json
data/2017-09-28/commit_log/: commit_log.json
data/2017-09-29/cloc/: cloc.json
data/2017-09-29/todos/: todos.json
data/2017-09-30/cloc/: cloc.json
data/2017-09-30/todos/: todos.json
data/2017-10-01/cloc/: cloc.json
data/2017-10-01/commit_log/: commit_log.json
data/2017-10-01/todos/: todos.json
data/2017-10-02/cloc/: cloc.json
data/2017-10-02/todos/: todos.json
data/2017-10-03/cloc/: cloc.json
data/2017-10-03/commit_log/: commit_log.json
data/2017-10-04/cloc/: cloc.json
data/2017-10-04/todos/: todos.json
data/2017-10-05/cloc/: cloc.json
data/2017-10-06/cloc/: cloc.json
data/2017-10-06/todos/: todos.json
data/2017-10-07/cloc/: cloc.json
data/2017-10-08/cloc/: cloc.json
data/2017-10-08/todos/: todos.json
data/2017-10-09/cloc/: cloc.json
data/2017-10-10/cloc/: cloc.json
data/2017-10-10/todos/: todos.json
data/2017-10-11/cloc/: cloc.json
data/2017-10-11/todos/: todos.json
data/2017-10-12/cloc/: cloc.json
data/2017-10-13/cloc/: cloc.json
data/2017-10-13/todos/: todos.json
data/2017-10-14/cloc/: cloc.json
data/2017-10-15/cloc/: cloc.json
data/2017-10-16/cloc/: cloc.json
data/2017-10-17/cloc/: cloc.json
data/2017-10-17/todos/: todos.json
data/2017-10-18/cloc/: cloc.json
data/2017-10-18/commit_log/: commit_log.json
data/2017-10-19/cloc/: cloc.json
data/2017-10-19/todos/: todos.json
data/2017-10-20/cloc/: cloc.json
data/2017-10-21/cloc/: cloc.json
data/2017-10-22/cloc/: cloc.json
data/2017-10-23/cloc/: cloc.json
data/2017-10-23/todos/: todos.json
data/2017-10-24/cloc/: cloc.json
data/2017-10-24/commit_log/: commit_log.json
data/2017-10-24/todos/: todos.json
data/2017-10-25/cloc/: cloc.json
data/2017-10-26/cloc/: cloc.json
data/2017-10-26/commit_log/: commit_log.json
data/2017-10-27/cloc/: cloc.json
data/2017-10-27/todos/: todos.json
data/2017-10-28/cloc/: cloc.json
data/2017-10-28/todos/: todos.json
data/2017-10-29/cloc/: cloc.json
data/2017-10-29/todos/: todos.json
data/2017-10-30/cloc/: cloc.json
data/2017-10-30/commit_log/: commit_log.json
data/2017-10-31/cloc/: cloc.json
data/2017-10-31/todos/: todos.json
data/2017-11-01/cloc/: cloc.json
data/2017-11-01/commit_log/: commit_log.json
data/2017-11-01/todos/: todos.json
data/2017-11-02/cloc/: cloc.json
data/2017-11-03/cloc/: cloc.json
data/2017-11-03/commit_log/: commit_log.json
data/2017-11-03/todos/: todos.json
data/2017-11-04/cloc/: cloc.json
data/2017-11-04/todos/: todos.json
demo/: BUILD.gn  common.cc  common.h  consumer.cc  gen_trace_config.cc  main.cc  producer.cc  proto_to_text.cc  run-demo.sh  service.cc  trace_config.json
ftrace_reader/src/: cpu_reader.cc  cpu_reader.h  cpu_reader_unittest.cc  end_to_end_integrationtest.cc  ftrace_controller.cc  ftrace_controller_unittest.cc  ftrace_procfs.cc  ftrace_procfs.h
gn/standalone/: proto_library.gni  typescript.gni
ipc/: BUILD.gn
ipc/src/: host_impl.cc  unix_socket.cc  unix_socket.h
protos/: BUILD  BUILD.gn  trace.proto
protos/ftrace/: ftrace_event.proto
protos/ipc/: BUILD.gn  consumer_port.proto  data_source_config.proto  producer_port.proto  trace_config.proto
protos/perfetto/trace/: perfetto_trace.proto
protos/perfetto/trace/ftrace/: alarmtimer.proto  all_protos.gni  asoc.proto  binder.proto  block.proto  bpf_test_run.proto  bpf_trace.proto  bridge.proto  cachefiles.proto  cfg80211.proto  cgroup.proto  clk.proto  cma.proto  compaction.proto  dev.proto  dma_fence.proto  drm.proto  emulation.proto  error_report.proto  ext4.proto  f2fs.proto  fib.proto  fib6.proto  filelock.proto  filemap.proto  fscache.proto  ftrace_event.proto  gadget.proto  gpio.proto  gpu_scheduler.proto  hwmon.proto  initcall.proto  io_uring.proto  iomap.proto  iommu.proto  iscsi.proto  jbd2.proto  kmem.proto  kvm.proto  kyber.proto  (+56 more)
scaletto/: ed.js  index.html  index.js  scaletto
src/trace_processor/: BUILD.gn  emscripten_task_runner.cc  sched_slice_table.cc  sched_slice_table.h  trace_storage.cc  trace_storage.h  wasm_bridge.cc
stashed-react-app/src/: index.tsx
test/configs/: ftrace.cfg
tools/: filter_source_map_paths  gen_bazel  gen_require_many_js
tools/femtobundle/: BUILD.gn  femtobundle.cc
tools/report/: checkout  compute_metrics.py  constants  fetch  index.html  report.py
tracing/: BUILD.gn
ui/: BUILD.gn  README.md  a.ts  a_unittest.ts  api.js  index.html  main.js  package-lock.json  package.json  perfetto.css  perfetto.html  perfetto.js  perfetto.ts  publish  tsconfig.json  tslint.json  unittest_runner.ts
ui/src/: app.ts  cpu-track-content-data.ts  cpu-track-content.ts  detail-axis.ts  global-brush-timeline.ts  index.tsx  ipc.ts  main.ts  my-element.ts  pan-content.ts  polymer.d.ts  processor.ts  slice-detail-panel.ts  slice-track-content-data.ts  slice-track-content.ts  state.ts  time-scale.ts  trace-data-store.ts  trace-processor.ts  trace-ui.ts  track-canvas-controller.ts  track-content-data.ts  track-content.ts  track-shell.ts  track-tree.ts  track.ts  ui-state-store.ts  worker.ts
ui/src/backend/: atrace.ts  index.ts  process_names.ts  protos.ts  state.ts
ui/src/components/: .#Hello.tsx  Hello.tsx
ui/src/constants/: index.tsx
ui/src/containers/: Hello.tsx
ui/src/core/: settings.ts  settings_unittest.ts
ui/src/frontend/: index.ts  ui-dispatcher.ts  ui-state-store.ts
ui/src/overview-timeline/: cpu-timeline.ts  frames-timeline.ts  global-brush-timeline.ts
ui/src/reducers/: index.tsx
ui/src/trace_processor/: index.ts
ui/src/types/: index.tsx
(+2054 files in other folders)
