# Copyright (C) 2017 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

executable("perfetto") {
  deps += [
    "//base",
    ":service",
    ":producer",
    ":consumer"
  ]
  sources = [ "main.cc" ]
}

source_set("service") {
  deps += [
    "//base",
    "//tracing",
    "//tracing:ipc",
    ":common",
  ]
  sources = [ "service.cc" ]
}

source_set("producer") {
  deps += [
    "//base",
    "//ftrace_reader",
    "//tracing",
    "//tracing:ipc",
    "//protos:zero",
    ":common",
  ]
  sources = [ "producer.cc" ]
}


source_set("consumer") {
  deps += [
    "//base",
    "//tracing",
    "//tracing:ipc",
    "//protos:lite",
    ":common",
  ]
  sources = [ "consumer.cc" ]
}

source_set("common") {
  deps += [
    "//base",
  ]
  sources = [ "common.cc" ]
}
