# Copyright (C) 2018 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../gn/perfetto.gni")

root_output_dir = "ui"

template("js_bundle") {
  assert(defined(invoker.name))
  assert(defined(invoker.sources))
  invoker_name = invoker.name
  invoker_sources = invoker.sources
  invoker_deps = []
  output_path = "$root_output_dir/$invoker_name"
  print(output_path)
  print(root_build_dir)
  print(root_out_dir)
  print(root_gen_dir)
  print(root_build_dir)
  print(target_out_dir)
  print(target_gen_dir)
  print(target_name)
  if (defined(invoker.deps)) {
    invoker_deps += invoker.deps
  }

  action(target_name) {
    sources = invoker_sources
    deps = invoker_deps
    inputs = ["${perfetto_root_path}package-lock.json"]
    script = "//gn/standalone/build_tool_wrapper.py"
    browserify_path = "${perfetto_root_path}node_modules/browserify/bin/cmd.js"
    args = [
      rebase_path(browserify_path, ""),
    ] + sources + [
      "-o",
      rebase_path(output_path, "")
    ]
    outputs = [output_path]
  }
}

group("ui") {
  deps = [
    ":index",
    ":css",
    ":js",
  ]
}

copy("index") {
  sources = ["perfetto.html"]
  outputs = ["$root_out_dir/ui/index.html"]
}

copy("css") {
  sources = ["perfetto.css"]
  outputs = ["$root_out_dir/ui/perfetto.css"]
}

copy("js") {
  sources = [
    "main.js"
  ]
  outputs = ["$root_out_dir/ui/main.js"]
}

js_bundle("bundle") {
  deps = [
    ":js",
  ]
  sources = [
    "$root_out_dir/ui/main.js"
  ]
  name = "ui/perfetto.js"
}
